bug fix(Excel was not fetching from DB before)